syntax = "proto3";

package crescent.marketmaker.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "crescent/marketmaker/v1beta1/marketmaker.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/crescent-network/crescent/v4/x/marketmaker/types";

message MarketMakerProposal {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  // title specifies the title of the proposal
  string title = 1;

  // description specifies the description of the proposal
  string description = 2;

  // set the market makers to eligible, refund deposit
  repeated MarketMakerHandle inclusions = 3
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"inclusions\""];

  // delete existing eligible market makers
  repeated MarketMakerHandle exclusions = 4
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"exclusions\""];

  // delete the not eligible market makers, refund deposit
  repeated MarketMakerHandle rejections = 5
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"rejections\""];

  // distribute claimable incentive to eligible market makers
  repeated IncentiveDistribution distributions = 6
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"distributions\""];
}

message MarketMakerHandle {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];

  uint64 pair_id = 2 [(gogoproto.moretags) = "yaml:\"pair_id\""];
}

message IncentiveDistribution {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];

  uint64 pair_id = 2 [(gogoproto.moretags) = "yaml:\"pair_id\""];

  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.moretags)     = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];
}
